[package]
name = "esp32-glowing-crystal-rs"
version = "0.1.0"
authors = ["Juraj Michalek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.13.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32c3"] }
esp-hal-smartled = { version = "0.6.0", features = ["esp32c3"] }
smart-leds = "0.3.0"
